create teams page

--- a/index.html
+++ b/index.html
@@ -36,22 +36,31 @@
                     <a href="team.html" class="nav-link">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Marketplace</a>
+                    <a href="market.html" class="nav-link">Marketplace</a>
                 </li>
                 <li class="nav-item ring">
                     <div class="icons">
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                            <a href="">
+                                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                            <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                                <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                            <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
+                                <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                            <a href="">
+                                <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                            </a>
                         </div>
+
                     </div>
                 </li>
             </ul>
