--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                     <a href="team.html" class="nav-link">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Marketplace</a>
+                    <a href="market.html" class="nav-link">Marketplace</a>
                 </li>
                 <li class="nav-item ring">
                     <div class="icons">
