--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                         Mobile Royale is a real-time global game for online strategy battle fans.Develop your city, trade with different clans across the land, train a variety of troops to form your very own army, join a Guild, form alliances, and engage in exhilarating wars!<br/>
                     </div>
                     <div class="info" style="margin-top: 18px;">
-                        Mobile royal is a DeFi x NFT gaming ecosystem with the difference that blockchain technology is applied to the game, along with  Play to Earn and Staking model. Unlike many other NFT Games, Mobile Royal does not require players to spend any money to start playing, which revolves around the plot:<br/>
+                        Mobile royal is a DeFi x NFT gaming ecosystem with the difference that blockchain technology is applied to the game, along with  Play to Earn and Staking model. Unlike many other NFT Games.<br/>
                     </div>
                     <div class="info" style="margin-top: 18px;">
                         Humans crave power, desire to live forever, want to change heaven and earth, and royal the vast universe.
