--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@
     <title> Mobile Royale</title>
 </head>
 <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Play%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7COxanium%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CTomorrow%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=5.8.2" type="text/css" media="all">
+<style>
+    .glass{
+        width: 60vw;
+    }
+
+</style>
 
 <body style="overflow-x: hidden">
     <header class="header" style="width: 100%;">
@@ -63,13 +69,12 @@
         </nav>
     </header>
 
-    
     <div class="blurred" style="width: 100vw; height:100vh; overflow: hidden; ">
         <div class="glass" style="margin-top: -10px; padding: 19px; line-height: 20px; height: 90vh;">
             <section class="counter">
                 <div class="container" style="margin-top: -40px; font-size: 12px; text-align: center;">
                     <h1 id="headline"> About Game</h1>
-                    <div id="countdown">
+                    <div id="countdown" style="margin-top: 20px;; margin-bottom: 20px;">
                         REAL-TIME STRATEGY & RPG: <br/>
                         Mobile Royale is a real-time global game for online strategy battle fans.Develop your city, trade with different clans across the land, train a variety of troops to form your very own army, join a Guild, form alliances, and engage in exhilarating wars!<br/>
                     </div>
@@ -81,16 +86,10 @@
                         To do this, humans need an evolution in both their thought and power. The best scientists in the world have researched, invented, and refined the most elite genes in history. Players, as kings to rule their kingdoms, have to cross time and space, create real battles to improve and evolve themselves.The first set of games will take place in the Middle Ages. Players can choose their own scenario, each player is like a king of a country, they can choose generals, build armies, devise strategies and fight battles. The game system supports multiple platforms and multiple devices: Web games (PC, mobile phone, tablet), Android, and iOS.
                         The second part will be in the future when humans cross time and space to build their Virtual Metaverse Empires. Players will no longer use traditional devices such as laptops or mobile phones to participate in the game, instead, they will enter a 3D virtual world, transform into gods with endless strength and abilities to create and conquer the new worlds.<br/>
                     </div>
-                    <div class="info" style="margin-top: 18px;">
-                        Humans crave power, desire to live forever, want to change heaven and earth, and royal the vast universe.To do this, humans need an evolution in both their thought and power. The best scientists in the world have researched, invented, and refined the most elite genes in history. Players, as kings to rule their kingdoms, have to cross time and space, create real battles to improve and evolve themselves.
-                        The first set of games will take place in the Middle Ages. Players can choose their own scenario, each player is like a king of a country, they can choose generals, build armies, devise strategies and fight battles. The game system supports multiple platforms and multiple devices: Web games (PC, mobile phone, tablet), Android, and iOS.
-                        The second part will be in the future when humans cross time and space to build their Virtual Metaverse Empires. Players will no longer use traditional devices such as laptops or mobile phones to participate in the game, instead, they will enter a 3D virtual world, transform into gods with endless strength and abilities to create and conquer the new worlds.<br/>
-                    </div>
                 </div>
             </section>
         </div>
     </div>
-    
 
     <footer  style="width: 100vw; background-size: 100vw;">
         <div class="footerLeft">
