--- a/about.html
+++ b/about.html
@@ -10,16 +10,34 @@
 </head>
 <link rel="stylesheet" id="google-fonts-1-css" href="https://fonts.googleapis.com/css?family=Play%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CRoboto%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7COxanium%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic%7CTomorrow%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2C400%2C400italic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&amp;display=auto&amp;ver=5.8.2" type="text/css" media="all">
 <style>
+
+    html{
+        color:goldenrod !important;
+    }
+
     .glass{
         width: 60vw;
+        color:goldenrod !important;
+
+    }
+
+    .blurred{
+        margin-top: 0px;
+        font-family: "Poppins";
+        color:goldenrod !important;
+    }
+
+    .counter{
+        color:goldenrod !important;
+
     }
 
 </style>
 
 <body style="overflow-x: hidden">
-    <header class="header" style="width: 100%;">
-        <nav class="navbar" >
-            <a href="home.html" class="nav-logo">
+    <header class="header">
+        <nav class="navbar">
+            <a href="index.html" class="nav-logo">
                 <img src="images/icons/logo.png"   alt=""headerImg" />
             </a>
             <ul class="nav-menu">
@@ -30,7 +48,7 @@
                     <a href="#" class="nav-link">NFT Access</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Whitepaper</a>
+                    <a href="token.html" class="nav-link">RYL Token</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Partner</a>
@@ -47,17 +65,26 @@
                 <li class="nav-item ring">
                     <div class="icons">
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                            <a href="">
+                                <img src="images/icons/IMG-20211206-WA0047.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                            <a href="https://mobile.twitter.com/royale_NFTS?t=fDbtnZR7bjnqbr8v-xzEcA&s=08">
+                                <img src="images/icons/IMG-20211206-WA0048.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                            <a href="https://youtube.com/channel/UCbaM3zENJwkjhHpfdVfM_3Q">
+                                <img src="images/icons/IMG-20211206-WA0049.jpg" alt="icon"/>
+                            </a>
                         </div>
                         <div class="sociaIcon">
-                            <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                            <a href="">
+                                <img src="images/icons/IMG-20211206-WA0050.jpg" alt="icon"/>
+                            </a>
                         </div>
+
                     </div>
                 </li>
             </ul>
@@ -72,7 +99,7 @@
     <div class="blurred" style="width: 100vw; height:100vh; overflow: hidden; ">
         <div class="glass" style="margin-top: -10px; padding: 19px; line-height: 20px; height: 90vh;">
             <section class="counter">
-                <div class="container" style="margin-top: -40px; font-size: 12px; text-align: center;">
+                <div class="container" style="margin-top: -40px; font-size: 12px; text-align: center; color: goldenrod !important;">
                     <h1 id="headline"> About Game</h1>
                     <div id="countdown" style="margin-top: 20px;; margin-bottom: 20px;">
                         REAL-TIME STRATEGY & RPG: <br/>
