--- a/coming.html
+++ b/coming.html
@@ -30,6 +30,17 @@
         font-family: "Poppins";
         font-size: 16px;
     }
+
+    @media all and (max-width: 768px) {
+        .coming{
+            background-image: url('resources/backs/[GetPaidStock.com]-61b6f2d1436dd.jpg');
+            background-size: 1550px;
+            width: 100vw;
+            height:50vh;
+            background-repeat: no-repeat;
+            text-align: center;
+        }
+    }
 </style>
 <body>
     <header class="header">
@@ -94,13 +105,13 @@
     </header>
 
     <div class="coming">
-        <p>We Are Working On this</p>
         <p>Coming Soon!!!</p>
+        <p>The Price Will Be ....</p>
     </div>
 
     <footer>
         <div class="footerLeft">
-            <a href="#" class="nav-logo">
+            <a href="index.html " class="nav-logo">
                 <img src="images/icons/logo.png"   alt=""headerImg" />
             </a>
             <p>Mobile Royale</p>
