--- a/token.html
+++ b/token.html
@@ -59,11 +59,19 @@
       }
 
     @media all and (max-width: 768px) {
+        .ryl{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100% !important;
+        }
         .ryl .tokCon{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            height: 100%;
         }
 
         .ryl .tokCon .row{
@@ -72,8 +80,68 @@
             justify-content: center;
             align-items: center;
         }
+
+        .ryl .tokCon .row .item{
+            margin-bottom: 40px;
+        }
     }
     
+
+    
+@media only screen and (max-width: 768px) {
+    .nav-menu {
+        position: fixed;
+        left: -100%;
+        top: 5rem;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0px;
+        background-color: goldenrod;
+        width: 100%;
+        border-radius: 10px;
+        text-align: center;
+        transition: 0.3s;
+        box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+        z-index: 9999;
+    }
+
+    .nav-menu.active {
+        left: 0;
+    }
+
+    .nav-item {
+        margin: 2.5rem 0;
+        z-index: 99999;
+        color: black;
+
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        z-index: 9999;
+    }
+
+    .hamburger.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .hamburger.active .bar:nth-child(1) {
+        -webkit-transform: translateY(8px) rotate(45deg);
+        transform: translateY(8px) rotate(45deg);
+    }
+
+    .hamburger.active .bar:nth-child(3) {
+        -webkit-transform: translateY(-8px) rotate(-45deg);
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .hero .heroSide2{
+        display: none;
+    }
+}
+
 
 </style>
 
@@ -88,10 +156,10 @@
                     <a href="index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">NFT Access</a>
+                    <a href="#" class="nav-link">NFT Heros</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Whitepaper</a>
+                    <a href="token.html" class="nav-link">RYL Token</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Partner</a>
